Make sure footer doesn't cause horizontal scrollbar

--- a/src/github-inject.less
+++ b/src/github-inject.less
@@ -121,6 +121,9 @@
         margin-right: 10px !important;
         margin-left: 10px !important;
     }
+    &.octotree-show .footer {
+        margin-left: auto !important;
+    }
     .css-truncate.css-truncate-target {
         white-space: normal !important;
         word-wrap: break-word !important;
